--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/bookmyshowdbjan23
 spring.datasource.username=sandeeppersonal
@@ -8,6 +8,6 @@ spring.jpa.show-sql=true
 
 
 # spring.jpa.hibernate.ddl-auto=create ->
-#   everytime we restart our appn, all tables will be dropped and then created again
+#   everytime we restart our appn, all tables will be dropped and then created again | CLEAN SLATE
 #  spring.jpa.hibernate.ddl-auto=update ->
 #   everytime we restart our appn, only new changes will be added, tables will not be dropped until explicitly done.
